--- a/.releaserc
+++ b/.releaserc
@@ -1,3 +1,12 @@
 {
-  "branches": ["master", "next"]
+  "branches": ["master"]
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/github",
+    ["@semantic-release/git", {
+      "assets": ["dist/**/*.{js,css}"],
+      "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+    }]
+  ]
 }
