--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "url": "https://github.com/RubenGuerrero/react-app-semantic-release.git"
   },
   "devDependencies": {
+    "@semantic-release/git": "^9.0.0",
     "semantic-release": "^17.2.1"
   }
 }
