--- a/.releaserc
+++ b/.releaserc
@@ -5,7 +5,7 @@
     "@semantic-release/release-notes-generator",
     "@semantic-release/github",
     ["@semantic-release/git", {
-      "assets": false,
+      "assets": ["package.json"],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }]
   ]
