--- a/.releaserc
+++ b/.releaserc
@@ -3,6 +3,10 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
+    ["@semantic-release/npm", {
+      "npmPublish": false,
+      "tarballDir": "dist",
+    }],
     ["@semantic-release/git", {
       "assets": ["package.json"],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
