--- a/.releaserc
+++ b/.releaserc
@@ -15,9 +15,7 @@
     [
       "@semantic-release/git",
       {
-        "assets": [
-          "package.json"
-        ],
+        "assets": [],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
@@ -25,7 +23,7 @@
       "@semantic-release/github",
       {
         "assets": [
-          "package.json"
+          "build"
         ]
       }
     ]
