--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,11 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run-script build
+      - name: Publish artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: build
+          path: build
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
