--- a/.releaserc
+++ b/.releaserc
@@ -8,24 +8,18 @@
     [
       "@semantic-release/npm",
       {
-        "npmPublish": false,
-        "tarballDir": "dist"
+        "npmPublish": false
       }
     ],
     [
       "@semantic-release/git",
       {
-        "assets": [],
+        "assets": [
+          "package.json"
+        ],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
-    [
-      "@semantic-release/github",
-      {
-        "assets": [
-          "build"
-        ]
-      }
-    ]
+    "@semantic-release/github"
   ]
 }
