--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,11 @@
-name: Release
+name: Create new release
 on:
   push:
     branches:
       - master
 jobs:
   release:
-    name: Release
+    name: Create new release
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout
@@ -18,13 +18,6 @@ jobs:
           node-version: 12
       - name: Install dependencies
         run: npm ci
-      - name: Build
-        run: npm run-script build
-      - name: Publish artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: build
-          path: build
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
