--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "url": "https://github.com/RubenGuerrero/react-app-semantic-release.git"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "semantic-release": "^17.2.1"
   }
