--- a/.releaserc
+++ b/.releaserc
@@ -16,7 +16,8 @@
       "@semantic-release/git",
       {
         "assets": [
-          "package.json", "CHANGELOG.md"
+          "package.json",
+          "CHANGELOG.md"
         ],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
