--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "swr": "^0.3.6",
+    "unfetch": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
