--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "react-app-semantic-release",
   "version": "2.1.0",
   "dependencies": {
+    "@sentry/react": "^5.27.3",
+    "@sentry/tracing": "^5.27.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -38,6 +40,7 @@
     "url": "https://github.com/RubenGuerrero/react-app-semantic-release.git"
   },
   "devDependencies": {
+    "@eclass/semantic-release-sentry-releases": "^2.7.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "semantic-release": "^17.2.1"
