--- a/.releaserc
+++ b/.releaserc
@@ -22,7 +22,19 @@
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
+    [
+      "@semantic-release/exec",
+      {
+        "prepareCmd": "npm run build"
+      }
+    ],
     "@semantic-release/github",
-    "@eclass/semantic-release-sentry-releases"
+    [
+      "@eclass/semantic-release-sentry-releases",
+      {
+        "sourcemaps": "dist",
+        "urlPrefix": "~/dist"
+      }
+    ]
   ]
 }
