--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-app-semantic-release",
   "version": "2.7.1",
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "@semantic-release/exec": "^5.0.0",
     "@sentry/react": "^5.27.3",
     "@sentry/tracing": "^5.27.3",
