feat: new build

--- a/.releaserc
+++ b/.releaserc
@@ -25,7 +25,7 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "npm run build"
+        "prepareCmd": "npm run build:ci"
       }
     ],
     "@semantic-release/github",
